--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
-/* * {
-	margin: 0;
-	padding: 0;
-} */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
+	font-family: 'Roboto', sans-serif;
+}
