--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,10 @@
 @tailwind utilities;
 
 * {
-  font-family: "Roboto", sans-serif;
+	font-family: 'Roboto', sans-serif;
 }
+
 body {
-  background-color: #ecf0f3;
+	background-color: #ecf0f3;
+	padding-top: 3rem;
 }
