Font styling and delayed rendering

--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,14 @@
 @tailwind utilities;
 
 * {
-	font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
-	background-color: #ecf0f3;
-	padding-top: 3rem;
+  background-color: #ecf0f3;
+  padding-top: 3rem;
+}
+
+.pokefont {
+  font-family: 'VT323', monospace;
 }
