--- a/src/index.css
+++ b/src/index.css
@@ -18,12 +18,14 @@ body {
   background-color: #e9e7db;
   border-color: #fb1b1b !important;
   pointer-events: none !important;
+  padding-right: 0.25rem;
 }
 
 .active-pokedex {
   background-color: #e9e7db;
   border-color: #0a285f !important;
   pointer-events: none !important;
+  padding-right: 0.25rem;
 }
 
 .progress-line,
